[package]
name = "digdug"
version = "0.1.0"
authors = ["Ted Naleid <contact@naleid.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0"
dns-lookup = "1.0.6"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1"